--- a/config/includes/combos.dtsi
+++ b/config/includes/combos.dtsi
@@ -1530,95 +1530,95 @@ ZMK_COMBO(gs_gt, &kp LG(LS(GT)), RH1 LH1 RM2 RB3, ALL, COMBO_TERM_FAST)
 // alt+ctrl+gui combos
 // ****************************************************************************
 
-ZMK_COMBO(acg_a, &kp LA(LC(LG((A))), RH2 LH2 LM4, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(acg_b, &kp LA(LC(LG((B))), RH2 LH2 LT0, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(acg_c, &kp LA(LC(LG((C))), RH2 LH2 LB2, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(acg_d, &kp LA(LC(LG((D))), RH2 LH2 LB1, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(acg_e, &kp LA(LC(LG((E))), RH2 LH2 RM2, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(acg_f, &kp LA(LC(LG((F))), RH2 LH2 LT2, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(acg_g, &kp LA(LC(LG((G))), RH2 LH2 LM0, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(acg_h, &kp LA(LC(LG((H))), RH2 LH2 RB1, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(acg_i, &kp LA(LC(LG((I))), RH2 LH2 RM3, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(acg_j, &kp LA(LC(LG((J))), RH2 LH2 RT0, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(acg_k, &kp LA(LC(LG((K))), RH2 LH2 RB0, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(acg_l, &kp LA(LC(LG((L))), RH2 LH2 RT1, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(acg_m, &kp LA(LC(LG((M))), RH2 LH2 RM0, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(acg_n, &kp LA(LC(LG((N))), RH2 LH2 RM1, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(acg_o, &kp LA(LC(LG((O))), RH2 LH2 RM4, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(acg_p, &kp LA(LC(LG((P))), RH2 LH2 LT1, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(acg_q, &kp LA(LC(LG((Q))), RH2 LH2 LT4, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(acg_r, &kp LA(LC(LG((R))), RH2 LH2 LM3, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(acg_s, &kp LA(LC(LG((S))), RH2 LH2 LM2, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(acg_t, &kp LA(LC(LG((T))), RH2 LH2 LM1, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(acg_u, &kp LA(LC(LG((U))), RH2 LH2 RT2, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(acg_v, &kp LA(LC(LG((V))), RH2 LH2 LB0, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(acg_w, &kp LA(LC(LG((W))), RH2 LH2 LT3, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(acg_x, &kp LA(LC(LG((X))), RH2 LH2 LB3, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(acg_y, &kp LA(LC(LG((Y))), RH2 LH2 RT3, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(acg_z, &kp LA(LC(LG((Z))), RH2 LH2 LB4, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(acg_enter, &kp LA(LC(LG((ENTER))), RH2 LH2 LM1 LM2, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(acg_tab, &kp LA(LC(LG((TAB))), RH2 LH2 LT2 LT3, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(acg_esc, &kp LA(LC(LG((ESC))), RH2 LH2 LM2 LM3, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(acg_space, &kp LA(LC(LG((SPACE))), RH2 LH2 LT3 LM4, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(acg_bspc, &kp LA(LC(LG((BSPC))), RH2 LH2 RT3 RM4, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(acg_up, &kp LA(LC(LG((UP))), RH2 LH2 RT2 RT3, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(acg_down, &kp LA(LC(LG((DOWN))), RH2 LH2 RM2 RM3, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(acg_left, &kp LA(LC(LG((LEFT))), RH2 LH2 RM1 RM2, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(acg_right, &kp LA(LC(LG((RIGHT))), RH2 LH2 RM3 RM4, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(acg_home, &kp LA(LC(LG((HOME))), RH2 LH2 RT1 RT2, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(acg_end, &kp LA(LC(LG((END))), RH2 LH2 RB1 RB2, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(acg_pg_up, &kp LA(LC(LG((PG_UP))), RH2 LH2 RT4 RT3, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(acg_pg_dn, &kp LA(LC(LG((PG_DN))), RH2 LH2 RB4 RB3, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(acg_0, &kp LA(LC(LG((N0))), RH2 LH2 RM5 LM4, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(acg_1, &kp LA(LC(LG((N1))), RH2 LH2 RM5 LB3, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(acg_2, &kp LA(LC(LG((N2))), RH2 LH2 RM5 LB2, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(acg_3, &kp LA(LC(LG((N3))), RH2 LH2 RM5 LB1, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(acg_4, &kp LA(LC(LG((N4))), RH2 LH2 RM5 LM3, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(acg_5, &kp LA(LC(LG((N5))), RH2 LH2 RM5 LM2, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(acg_6, &kp LA(LC(LG((N6))), RH2 LH2 RM5 LM1, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(acg_7, &kp LA(LC(LG((N7))), RH2 LH2 RM5 LT3, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(acg_8, &kp LA(LC(LG((N8))), RH2 LH2 RM5 LT2, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(acg_9, &kp LA(LC(LG((N9))), RH2 LH2 RM5 LT1, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(acg_f1, &kp LA(LC(LG((F1))), RH2 LH2 RB5 LB3, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(acg_f2, &kp LA(LC(LG((F2))), RH2 LH2 RB5 LB2, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(acg_f3, &kp LA(LC(LG((F3))), RH2 LH2 RB5 LB1, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(acg_f4, &kp LA(LC(LG((F4))), RH2 LH2 RB5 LM3, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(acg_f5, &kp LA(LC(LG((F5))), RH2 LH2 RB5 LM2, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(acg_f6, &kp LA(LC(LG((F6))), RH2 LH2 RB5 LM1, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(acg_f7, &kp LA(LC(LG((F7))), RH2 LH2 RB5 LT3, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(acg_f8, &kp LA(LC(LG((F8))), RH2 LH2 RB5 LT2, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(acg_f9, &kp LA(LC(LG((F9))), RH2 LH2 RB5 LT1, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(acg_f10, &kp LA(LC(LG((F10))), RH2 LH2 RB5 LB4, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(acg_f11, &kp LA(LC(LG((F11))), RH2 LH2 RB5 LM4, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(acg_f12, &kp LA(LC(LG((F12))), RH2 LH2 RB5 LT4, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(acg_semicolon, &kp LA(LC(LG((SEMICOLON))), RH2 LH2 RB2, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(acg_colon, &kp LA(LC(LG((COLON))), RH2 LH2 RB3, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(acg_excl, &kp LA(LC(LG((EXCL))), RH2 LH2 RB4, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(acg_dqt, &kp LA(LC(LG((EXCL))), RH2 LH2 RT4, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(acg_at, &kp LA(LC(LG((AT))), RH2 LH2 LB3 LM3, ALL, COMBO_TERM_SLOW)
-ZMK_COMBO(acg_hash, &kp LA(LC(LG((HASH))), RH2 LH2 LB2 LM2, ALL, COMBO_TERM_SLOW)
-ZMK_COMBO(acg_dllr, &kp LA(LC(LG((DLLR))), RH2 LH2 LB1 LM1, ALL, COMBO_TERM_SLOW)
-ZMK_COMBO(acg_prcnt, &kp LA(LC(LG((PRCNT))), RH2 LH2 LB0 LM0, ALL, COMBO_TERM_SLOW)
-ZMK_COMBO(acg_caret, &kp LA(LC(LG((CARET))), RH2 LH2 RB0 RM0, ALL, COMBO_TERM_SLOW)
-ZMK_COMBO(acg_amps, &kp LA(LC(LG((AMPS))), RH2 LH2 RB1 RM1, ALL, COMBO_TERM_SLOW)
-ZMK_COMBO(acg_star, &kp LA(LC(LG((STAR))), RH2 LH2 RB2 RM2, ALL, COMBO_TERM_SLOW)
-ZMK_COMBO(acg_tilde, &kp LA(LC(LG((TILDE))), RH2 LH2 LM3 LT3, ALL, COMBO_TERM_SLOW)
-ZMK_COMBO(acg_grave, &kp LA(LC(LG((GRAVE))), RH2 LH2 LM2 LT2, ALL, COMBO_TERM_SLOW)
-ZMK_COMBO(acg_bslh, &kp LA(LC(LG((BSLH))), RH2 LH2 LM1 LT1, ALL, COMBO_TERM_SLOW)
-ZMK_COMBO(acg_pipe, &kp LA(LC(LG((PIPE))), RH2 LH2 LM0 LT0, ALL, COMBO_TERM_SLOW)
-ZMK_COMBO(acg_under, &kp LA(LC(LG((UNDER))), RH2 LH2 RM0 RT0, ALL, COMBO_TERM_SLOW)
-ZMK_COMBO(acg_minus, &kp LA(LC(LG((MINUS))), RH2 LH2 RM1 RT1, ALL, COMBO_TERM_SLOW)
-ZMK_COMBO(acg_equal, &kp LA(LC(LG((EQUAL))), RH2 LH2 RM2 RT2, ALL, COMBO_TERM_SLOW)
-ZMK_COMBO(acg_plus, &kp LA(LC(LG((PLUS))), RH2 LH2 RM3 RT3, ALL, COMBO_TERM_SLOW)
-ZMK_COMBO(acg_slash, &kp LA(LC(LG((SLASH))), RH2 LH2 RM0 RM1, ALL, COMBO_TERM_SLOW)
-ZMK_COMBO(acg_rbrc, &kp LA(LC(LG((RBRC))), RH2 LH2 LT2 LM1, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(acg_rbkt, &kp LA(LC(LG((RBKT))), RH2 LH2 LM2 LB1, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(acg_lbrc, &kp LA(LC(LG((LBRC))), RH2 LH2 LT2 LM3, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(acg_lbkt, &kp LA(LC(LG((LBKT))), RH2 LH2 LM2 LB3, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(acg_lpar, &kp LA(LC(LG((LPAR))), RH2 LH2 RT2 RM1, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(acg_lt, &kp LA(LC(LG((LT))), RH2 LH2 RM2 RB1, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(acg_rpar, &kp LA(LC(LG((RPAR))), RH2 LH2 RT2 RM3, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(acg_gt, &kp LA(LC(LG((GT))), RH2 LH2 RM2 RB3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(acg_a, &kp LA(LC(LG(A))), LH2 RH2 LM4, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(acg_b, &kp LA(LC(LG(B))), LH2 RH2 LT0, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(acg_c, &kp LA(LC(LG(C))), LH2 RH2 LB2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(acg_d, &kp LA(LC(LG(D))), LH2 RH2 LB1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(acg_e, &kp LA(LC(LG(E))), LH2 RH2 RM2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(acg_f, &kp LA(LC(LG(F))), LH2 RH2 LT2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(acg_g, &kp LA(LC(LG(G))), LH2 RH2 LM0, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(acg_h, &kp LA(LC(LG(H))), LH2 RH2 RB1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(acg_i, &kp LA(LC(LG(I))), LH2 RH2 RM3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(acg_j, &kp LA(LC(LG(J))), LH2 RH2 RT0, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(acg_k, &kp LA(LC(LG(K))), LH2 RH2 RB0, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(acg_l, &kp LA(LC(LG(L))), LH2 RH2 RT1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(acg_m, &kp LA(LC(LG(M))), LH2 RH2 RM0, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(acg_n, &kp LA(LC(LG(N))), LH2 RH2 RM1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(acg_o, &kp LA(LC(LG(O))), LH2 RH2 RM4, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(acg_p, &kp LA(LC(LG(P))), LH2 RH2 LT1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(acg_q, &kp LA(LC(LG(Q))), LH2 RH2 LT4, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(acg_r, &kp LA(LC(LG(R))), LH2 RH2 LM3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(acg_s, &kp LA(LC(LG(S))), LH2 RH2 LM2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(acg_t, &kp LA(LC(LG(T))), LH2 RH2 LM1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(acg_u, &kp LA(LC(LG(U))), LH2 RH2 RT2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(acg_v, &kp LA(LC(LG(V))), LH2 RH2 LB0, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(acg_w, &kp LA(LC(LG(W))), LH2 RH2 LT3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(acg_x, &kp LA(LC(LG(X))), LH2 RH2 LB3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(acg_y, &kp LA(LC(LG(Y))), LH2 RH2 RT3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(acg_z, &kp LA(LC(LG(Z))), LH2 RH2 LB4, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(acg_enter, &kp LA(LC(LG(ENTER))), LH2 RH2 LM1 LM2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(acg_tab, &kp LA(LC(LG(TAB))), LH2 RH2 LT2 LT3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(acg_esc, &kp LA(LC(LG(ESC))), LH2 RH2 LM2 LM3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(acg_space, &kp LA(LC(LG(SPACE))), LH2 RH2 LT3 LM4, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(acg_bspc, &kp LA(LC(LG(BSPC))), LH2 RH2 RT3 RM4, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(acg_up, &kp LA(LC(LG(UP))), LH2 RH2 RT2 RT3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(acg_down, &kp LA(LC(LG(DOWN))), LH2 RH2 RM2 RM3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(acg_left, &kp LA(LC(LG(LEFT))), LH2 RH2 RM1 RM2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(acg_right, &kp LA(LC(LG(RIGHT))), LH2 RH2 RM3 RM4, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(acg_home, &kp LA(LC(LG(HOME))), LH2 RH2 RT1 RT2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(acg_end, &kp LA(LC(LG(END))), LH2 RH2 RB1 RB2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(acg_pg_up, &kp LA(LC(LG(PG_UP))), LH2 RH2 RT4 RT3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(acg_pg_dn, &kp LA(LC(LG(PG_DN))), LH2 RH2 RB4 RB3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(acg_0, &kp LA(LC(LG(N0))), LH2 RH2 RM5 LM4, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(acg_1, &kp LA(LC(LG(N1))), LH2 RH2 RM5 LB3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(acg_2, &kp LA(LC(LG(N2))), LH2 RH2 RM5 LB2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(acg_3, &kp LA(LC(LG(N3))), LH2 RH2 RM5 LB1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(acg_4, &kp LA(LC(LG(N4))), LH2 RH2 RM5 LM3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(acg_5, &kp LA(LC(LG(N5))), LH2 RH2 RM5 LM2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(acg_6, &kp LA(LC(LG(N6))), LH2 RH2 RM5 LM1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(acg_7, &kp LA(LC(LG(N7))), LH2 RH2 RM5 LT3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(acg_8, &kp LA(LC(LG(N8))), LH2 RH2 RM5 LT2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(acg_9, &kp LA(LC(LG(N9))), LH2 RH2 RM5 LT1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(acg_f1, &kp LA(LC(LG(F1))), LH2 RH2 RB5 LB3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(acg_f2, &kp LA(LC(LG(F2))), LH2 RH2 RB5 LB2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(acg_f3, &kp LA(LC(LG(F3))), LH2 RH2 RB5 LB1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(acg_f4, &kp LA(LC(LG(F4))), LH2 RH2 RB5 LM3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(acg_f5, &kp LA(LC(LG(F5))), LH2 RH2 RB5 LM2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(acg_f6, &kp LA(LC(LG(F6))), LH2 RH2 RB5 LM1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(acg_f7, &kp LA(LC(LG(F7))), LH2 RH2 RB5 LT3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(acg_f8, &kp LA(LC(LG(F8))), LH2 RH2 RB5 LT2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(acg_f9, &kp LA(LC(LG(F9))), LH2 RH2 RB5 LT1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(acg_f10, &kp LA(LC(LG(F10))), LH2 RH2 RB5 LB4, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(acg_f11, &kp LA(LC(LG(F11))), LH2 RH2 RB5 LM4, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(acg_f12, &kp LA(LC(LG(F12))), LH2 RH2 RB5 LT4, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(acg_semicolon, &kp LA(LC(LG(SEMICOLON))), LH2 RH2 RB2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(acg_colon, &kp LA(LC(LG(COLON))), LH2 RH2 RB3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(acg_excl, &kp LA(LC(LG(EXCL))), LH2 RH2 RB4, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(acg_dqt, &kp LA(LC(LG(EXCL))), LH2 RH2 RT4, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(acg_at, &kp LA(LC(LG(AT))), LH2 RH2 LB3 LM3, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(acg_hash, &kp LA(LC(LG(HASH))), LH2 RH2 LB2 LM2, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(acg_dllr, &kp LA(LC(LG(DLLR))), LH2 RH2 LB1 LM1, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(acg_prcnt, &kp LA(LC(LG(PRCNT))), LH2 RH2 LB0 LM0, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(acg_caret, &kp LA(LC(LG(CARET))), LH2 RH2 RB0 RM0, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(acg_amps, &kp LA(LC(LG(AMPS))), LH2 RH2 RB1 RM1, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(acg_star, &kp LA(LC(LG(STAR))), LH2 RH2 RB2 RM2, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(acg_tilde, &kp LA(LC(LG(TILDE))), LH2 RH2 LM3 LT3, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(acg_grave, &kp LA(LC(LG(GRAVE))), LH2 RH2 LM2 LT2, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(acg_bslh, &kp LA(LC(LG(BSLH))), LH2 RH2 LM1 LT1, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(acg_pipe, &kp LA(LC(LG(PIPE))), LH2 RH2 LM0 LT0, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(acg_under, &kp LA(LC(LG(UNDER))), LH2 RH2 RM0 RT0, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(acg_minus, &kp LA(LC(LG(MINUS))), LH2 RH2 RM1 RT1, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(acg_equal, &kp LA(LC(LG(EQUAL))), LH2 RH2 RM2 RT2, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(acg_plus, &kp LA(LC(LG(PLUS))), LH2 RH2 RM3 RT3, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(acg_slash, &kp LA(LC(LG(SLASH))), LH2 RH2 RM0 RM1, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(acg_rbrc, &kp LA(LC(LG(RBRC))), LH2 RH2 LT2 LM1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(acg_rbkt, &kp LA(LC(LG(RBKT))), LH2 RH2 LM2 LB1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(acg_lbrc, &kp LA(LC(LG(LBRC))), LH2 RH2 LT2 LM3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(acg_lbkt, &kp LA(LC(LG(LBKT))), LH2 RH2 LM2 LB3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(acg_lpar, &kp LA(LC(LG(LPAR))), LH2 RH2 RT2 RM1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(acg_lt, &kp LA(LC(LG(LT))), LH2 RH2 RM2 RB1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(acg_rpar, &kp LA(LC(LG(RPAR))), LH2 RH2 RT2 RM3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(acg_gt, &kp LA(LC(LG(GT))), LH2 RH2 RM2 RB3, ALL, COMBO_TERM_FAST)
 
 // ****************************************************************************
 // alt+gui+shift combos
