--- a/config/includes/combos.dtsi
+++ b/config/includes/combos.dtsi
@@ -1624,95 +1624,95 @@ ZMK_COMBO(acg_gt, &kp LA(LC(LG(GT))), LH2 RH2 RM2 RB3, ALL, COMBO_TERM_FAST)
 // alt+gui+shift combos
 // ****************************************************************************
 
-ZMK_COMBO(ags_a, &kp LA(LG(LS((A))), LH1 LH2 LM4, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(ags_b, &kp LA(LG(LS((B))), LH1 LH2 LT0, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(ags_c, &kp LA(LG(LS((C))), LH1 LH2 LB2, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(ags_d, &kp LA(LG(LS((D))), LH1 LH2 LB1, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(ags_e, &kp LA(LG(LS((E))), LH1 LH2 RM2, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(ags_f, &kp LA(LG(LS((F))), LH1 LH2 LT2, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(ags_g, &kp LA(LG(LS((G))), LH1 LH2 LM0, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(ags_h, &kp LA(LG(LS((H))), LH1 LH2 RB1, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(ags_i, &kp LA(LG(LS((I))), LH1 LH2 RM3, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(ags_j, &kp LA(LG(LS((J))), LH1 LH2 RT0, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(ags_k, &kp LA(LG(LS((K))), LH1 LH2 RB0, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(ags_l, &kp LA(LG(LS((L))), LH1 LH2 RT1, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(ags_m, &kp LA(LG(LS((M))), LH1 LH2 RM0, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(ags_n, &kp LA(LG(LS((N))), LH1 LH2 RM1, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(ags_o, &kp LA(LG(LS((O))), LH1 LH2 RM4, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(ags_p, &kp LA(LG(LS((P))), LH1 LH2 LT1, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(ags_q, &kp LA(LG(LS((Q))), LH1 LH2 LT4, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(ags_r, &kp LA(LG(LS((R))), LH1 LH2 LM3, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(ags_s, &kp LA(LG(LS((S))), LH1 LH2 LM2, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(ags_t, &kp LA(LG(LS((T))), LH1 LH2 LM1, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(ags_u, &kp LA(LG(LS((U))), LH1 LH2 RT2, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(ags_v, &kp LA(LG(LS((V))), LH1 LH2 LB0, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(ags_w, &kp LA(LG(LS((W))), LH1 LH2 LT3, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(ags_x, &kp LA(LG(LS((X))), LH1 LH2 LB3, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(ags_y, &kp LA(LG(LS((Y))), LH1 LH2 RT3, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(ags_z, &kp LA(LG(LS((Z))), LH1 LH2 LB4, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(ags_enter, &kp LA(LG(LS((ENTER))), LH1 LH2 LM1 LM2, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(ags_tab, &kp LA(LG(LS((TAB))), LH1 LH2 LT2 LT3, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(ags_esc, &kp LA(LG(LS((ESC))), LH1 LH2 LM2 LM3, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(ags_space, &kp LA(LG(LS((SPACE))), LH1 LH2 LT3 LM4, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(ags_bspc, &kp LA(LG(LS((BSPC))), LH1 LH2 RT3 RM4, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(ags_up, &kp LA(LG(LS((UP))), LH1 LH2 RT2 RT3, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(ags_down, &kp LA(LG(LS((DOWN))), LH1 LH2 RM2 RM3, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(ags_left, &kp LA(LG(LS((LEFT))), LH1 LH2 RM1 RM2, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(ags_right, &kp LA(LG(LS((RIGHT))), LH1 LH2 RM3 RM4, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(ags_home, &kp LA(LG(LS((HOME))), LH1 LH2 RT1 RT2, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(ags_end, &kp LA(LG(LS((END))), LH1 LH2 RB1 RB2, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(ags_pg_up, &kp LA(LG(LS((PG_UP))), LH1 LH2 RT4 RT3, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(ags_pg_dn, &kp LA(LG(LS((PG_DN))), LH1 LH2 RB4 RB3, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(ags_0, &kp LA(LG(LS((N0))), LH1 LH2 RM5 LM4, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(ags_1, &kp LA(LG(LS((N1))), LH1 LH2 RM5 LB3, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(ags_2, &kp LA(LG(LS((N2))), LH1 LH2 RM5 LB2, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(ags_3, &kp LA(LG(LS((N3))), LH1 LH2 RM5 LB1, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(ags_4, &kp LA(LG(LS((N4))), LH1 LH2 RM5 LM3, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(ags_5, &kp LA(LG(LS((N5))), LH1 LH2 RM5 LM2, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(ags_6, &kp LA(LG(LS((N6))), LH1 LH2 RM5 LM1, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(ags_7, &kp LA(LG(LS((N7))), LH1 LH2 RM5 LT3, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(ags_8, &kp LA(LG(LS((N8))), LH1 LH2 RM5 LT2, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(ags_9, &kp LA(LG(LS((N9))), LH1 LH2 RM5 LT1, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(ags_f1, &kp LA(LG(LS((F1))), LH1 LH2 RB5 LB3, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(ags_f2, &kp LA(LG(LS((F2))), LH1 LH2 RB5 LB2, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(ags_f3, &kp LA(LG(LS((F3))), LH1 LH2 RB5 LB1, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(ags_f4, &kp LA(LG(LS((F4))), LH1 LH2 RB5 LM3, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(ags_f5, &kp LA(LG(LS((F5))), LH1 LH2 RB5 LM2, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(ags_f6, &kp LA(LG(LS((F6))), LH1 LH2 RB5 LM1, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(ags_f7, &kp LA(LG(LS((F7))), LH1 LH2 RB5 LT3, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(ags_f8, &kp LA(LG(LS((F8))), LH1 LH2 RB5 LT2, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(ags_f9, &kp LA(LG(LS((F9))), LH1 LH2 RB5 LT1, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(ags_f10, &kp LA(LG(LS((F10))), LH1 LH2 RB5 LB4, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(ags_f11, &kp LA(LG(LS((F11))), LH1 LH2 RB5 LM4, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(ags_f12, &kp LA(LG(LS((F12))), LH1 LH2 RB5 LT4, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(ags_semicolon, &kp LA(LG(LS((SEMICOLON))), LH1 LH2 RB2, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(ags_colon, &kp LA(LG(LS((COLON))), LH1 LH2 RB3, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(ags_excl, &kp LA(LG(LS((EXCL))), LH1 LH2 RB4, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(ags_dqt, &kp LA(LG(LS((EXCL))), LH1 LH2 RT4, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(ags_at, &kp LA(LG(LS((AT))), LH1 LH2 LB3 LM3, ALL, COMBO_TERM_SLOW)
-ZMK_COMBO(ags_hash, &kp LA(LG(LS((HASH))), LH1 LH2 LB2 LM2, ALL, COMBO_TERM_SLOW)
-ZMK_COMBO(ags_dllr, &kp LA(LG(LS((DLLR))), LH1 LH2 LB1 LM1, ALL, COMBO_TERM_SLOW)
-ZMK_COMBO(ags_prcnt, &kp LA(LG(LS((PRCNT))), LH1 LH2 LB0 LM0, ALL, COMBO_TERM_SLOW)
-ZMK_COMBO(ags_caret, &kp LA(LG(LS((CARET))), LH1 LH2 RB0 RM0, ALL, COMBO_TERM_SLOW)
-ZMK_COMBO(ags_amps, &kp LA(LG(LS((AMPS))), LH1 LH2 RB1 RM1, ALL, COMBO_TERM_SLOW)
-ZMK_COMBO(ags_star, &kp LA(LG(LS((STAR))), LH1 LH2 RB2 RM2, ALL, COMBO_TERM_SLOW)
-ZMK_COMBO(ags_tilde, &kp LA(LG(LS((TILDE))), LH1 LH2 LM3 LT3, ALL, COMBO_TERM_SLOW)
-ZMK_COMBO(ags_grave, &kp LA(LG(LS((GRAVE))), LH1 LH2 LM2 LT2, ALL, COMBO_TERM_SLOW)
-ZMK_COMBO(ags_bslh, &kp LA(LG(LS((BSLH))), LH1 LH2 LM1 LT1, ALL, COMBO_TERM_SLOW)
-ZMK_COMBO(ags_pipe, &kp LA(LG(LS((PIPE))), LH1 LH2 LM0 LT0, ALL, COMBO_TERM_SLOW)
-ZMK_COMBO(ags_under, &kp LA(LG(LS((UNDER))), LH1 LH2 RM0 RT0, ALL, COMBO_TERM_SLOW)
-ZMK_COMBO(ags_minus, &kp LA(LG(LS((MINUS))), LH1 LH2 RM1 RT1, ALL, COMBO_TERM_SLOW)
-ZMK_COMBO(ags_equal, &kp LA(LG(LS((EQUAL))), LH1 LH2 RM2 RT2, ALL, COMBO_TERM_SLOW)
-ZMK_COMBO(ags_plus, &kp LA(LG(LS((PLUS))), LH1 LH2 RM3 RT3, ALL, COMBO_TERM_SLOW)
-ZMK_COMBO(ags_slash, &kp LA(LG(LS((SLASH))), LH1 LH2 RM0 RM1, ALL, COMBO_TERM_SLOW)
-ZMK_COMBO(ags_rbrc, &kp LA(LG(LS((RBRC))), LH1 LH2 LT2 LM1, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(ags_rbkt, &kp LA(LG(LS((RBKT))), LH1 LH2 LM2 LB1, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(ags_lbrc, &kp LA(LG(LS((LBRC))), LH1 LH2 LT2 LM3, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(ags_lbkt, &kp LA(LG(LS((LBKT))), LH1 LH2 LM2 LB3, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(ags_lpar, &kp LA(LG(LS((LPAR))), LH1 LH2 RT2 RM1, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(ags_lt, &kp LA(LG(LS((LT))), LH1 LH2 RM2 RB1, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(ags_rpar, &kp LA(LG(LS((RPAR))), LH1 LH2 RT2 RM3, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(ags_gt, &kp LA(LG(LS((GT))), LH1 LH2 RM2 RB3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ags_a, &kp LA(LG(LS(A))), LH2 LH1 LM4, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ags_b, &kp LA(LG(LS(B))), LH2 LH1 LT0, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ags_c, &kp LA(LG(LS(C))), LH2 LH1 LB2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ags_d, &kp LA(LG(LS(D))), LH2 LH1 LB1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ags_e, &kp LA(LG(LS(E))), LH2 LH1 RM2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ags_f, &kp LA(LG(LS(F))), LH2 LH1 LT2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ags_g, &kp LA(LG(LS(G))), LH2 LH1 LM0, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ags_h, &kp LA(LG(LS(H))), LH2 LH1 RB1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ags_i, &kp LA(LG(LS(I))), LH2 LH1 RM3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ags_j, &kp LA(LG(LS(J))), LH2 LH1 RT0, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ags_k, &kp LA(LG(LS(K))), LH2 LH1 RB0, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ags_l, &kp LA(LG(LS(L))), LH2 LH1 RT1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ags_m, &kp LA(LG(LS(M))), LH2 LH1 RM0, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ags_n, &kp LA(LG(LS(N))), LH2 LH1 RM1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ags_o, &kp LA(LG(LS(O))), LH2 LH1 RM4, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ags_p, &kp LA(LG(LS(P))), LH2 LH1 LT1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ags_q, &kp LA(LG(LS(Q))), LH2 LH1 LT4, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ags_r, &kp LA(LG(LS(R))), LH2 LH1 LM3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ags_s, &kp LA(LG(LS(S))), LH2 LH1 LM2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ags_t, &kp LA(LG(LS(T))), LH2 LH1 LM1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ags_u, &kp LA(LG(LS(U))), LH2 LH1 RT2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ags_v, &kp LA(LG(LS(V))), LH2 LH1 LB0, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ags_w, &kp LA(LG(LS(W))), LH2 LH1 LT3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ags_x, &kp LA(LG(LS(X))), LH2 LH1 LB3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ags_y, &kp LA(LG(LS(Y))), LH2 LH1 RT3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ags_z, &kp LA(LG(LS(Z))), LH2 LH1 LB4, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ags_enter, &kp LA(LG(LS(ENTER))), LH2 LH1 LM1 LM2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ags_tab, &kp LA(LG(LS(TAB))), LH2 LH1 LT2 LT3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ags_esc, &kp LA(LG(LS(ESC))), LH2 LH1 LM2 LM3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ags_space, &kp LA(LG(LS(SPACE))), LH2 LH1 LT3 LM4, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ags_bspc, &kp LA(LG(LS(BSPC))), LH2 LH1 RT3 RM4, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ags_up, &kp LA(LG(LS(UP))), LH2 LH1 RT2 RT3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ags_down, &kp LA(LG(LS(DOWN))), LH2 LH1 RM2 RM3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ags_left, &kp LA(LG(LS(LEFT))), LH2 LH1 RM1 RM2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ags_right, &kp LA(LG(LS(RIGHT))), LH2 LH1 RM3 RM4, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ags_home, &kp LA(LG(LS(HOME))), LH2 LH1 RT1 RT2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ags_end, &kp LA(LG(LS(END))), LH2 LH1 RB1 RB2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ags_pg_up, &kp LA(LG(LS(PG_UP))), LH2 LH1 RT4 RT3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ags_pg_dn, &kp LA(LG(LS(PG_DN))), LH2 LH1 RB4 RB3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ags_0, &kp LA(LG(LS(N0))), LH2 LH1 RM5 LM4, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ags_1, &kp LA(LG(LS(N1))), LH2 LH1 RM5 LB3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ags_2, &kp LA(LG(LS(N2))), LH2 LH1 RM5 LB2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ags_3, &kp LA(LG(LS(N3))), LH2 LH1 RM5 LB1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ags_4, &kp LA(LG(LS(N4))), LH2 LH1 RM5 LM3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ags_5, &kp LA(LG(LS(N5))), LH2 LH1 RM5 LM2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ags_6, &kp LA(LG(LS(N6))), LH2 LH1 RM5 LM1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ags_7, &kp LA(LG(LS(N7))), LH2 LH1 RM5 LT3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ags_8, &kp LA(LG(LS(N8))), LH2 LH1 RM5 LT2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ags_9, &kp LA(LG(LS(N9))), LH2 LH1 RM5 LT1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ags_f1, &kp LA(LG(LS(F1))), LH2 LH1 RB5 LB3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ags_f2, &kp LA(LG(LS(F2))), LH2 LH1 RB5 LB2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ags_f3, &kp LA(LG(LS(F3))), LH2 LH1 RB5 LB1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ags_f4, &kp LA(LG(LS(F4))), LH2 LH1 RB5 LM3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ags_f5, &kp LA(LG(LS(F5))), LH2 LH1 RB5 LM2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ags_f6, &kp LA(LG(LS(F6))), LH2 LH1 RB5 LM1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ags_f7, &kp LA(LG(LS(F7))), LH2 LH1 RB5 LT3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ags_f8, &kp LA(LG(LS(F8))), LH2 LH1 RB5 LT2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ags_f9, &kp LA(LG(LS(F9))), LH2 LH1 RB5 LT1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ags_f10, &kp LA(LG(LS(F10))), LH2 LH1 RB5 LB4, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ags_f11, &kp LA(LG(LS(F11))), LH2 LH1 RB5 LM4, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ags_f12, &kp LA(LG(LS(F12))), LH2 LH1 RB5 LT4, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ags_semicolon, &kp LA(LG(LS(SEMICOLON))), LH2 LH1 RB2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ags_colon, &kp LA(LG(LS(COLON))), LH2 LH1 RB3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ags_excl, &kp LA(LG(LS(EXCL))), LH2 LH1 RB4, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ags_dqt, &kp LA(LG(LS(EXCL))), LH2 LH1 RT4, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ags_at, &kp LA(LG(LS(AT))), LH2 LH1 LB3 LM3, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(ags_hash, &kp LA(LG(LS(HASH))), LH2 LH1 LB2 LM2, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(ags_dllr, &kp LA(LG(LS(DLLR))), LH2 LH1 LB1 LM1, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(ags_prcnt, &kp LA(LG(LS(PRCNT))), LH2 LH1 LB0 LM0, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(ags_caret, &kp LA(LG(LS(CARET))), LH2 LH1 RB0 RM0, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(ags_amps, &kp LA(LG(LS(AMPS))), LH2 LH1 RB1 RM1, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(ags_star, &kp LA(LG(LS(STAR))), LH2 LH1 RB2 RM2, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(ags_tilde, &kp LA(LG(LS(TILDE))), LH2 LH1 LM3 LT3, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(ags_grave, &kp LA(LG(LS(GRAVE))), LH2 LH1 LM2 LT2, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(ags_bslh, &kp LA(LG(LS(BSLH))), LH2 LH1 LM1 LT1, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(ags_pipe, &kp LA(LG(LS(PIPE))), LH2 LH1 LM0 LT0, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(ags_under, &kp LA(LG(LS(UNDER))), LH2 LH1 RM0 RT0, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(ags_minus, &kp LA(LG(LS(MINUS))), LH2 LH1 RM1 RT1, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(ags_equal, &kp LA(LG(LS(EQUAL))), LH2 LH1 RM2 RT2, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(ags_plus, &kp LA(LG(LS(PLUS))), LH2 LH1 RM3 RT3, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(ags_slash, &kp LA(LG(LS(SLASH))), LH2 LH1 RM0 RM1, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(ags_rbrc, &kp LA(LG(LS(RBRC))), LH2 LH1 LT2 LM1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ags_rbkt, &kp LA(LG(LS(RBKT))), LH2 LH1 LM2 LB1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ags_lbrc, &kp LA(LG(LS(LBRC))), LH2 LH1 LT2 LM3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ags_lbkt, &kp LA(LG(LS(LBKT))), LH2 LH1 LM2 LB3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ags_lpar, &kp LA(LG(LS(LPAR))), LH2 LH1 RT2 RM1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ags_lt, &kp LA(LG(LS(LT))), LH2 LH1 RM2 RB1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ags_rpar, &kp LA(LG(LS(RPAR))), LH2 LH1 RT2 RM3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ags_gt, &kp LA(LG(LS(GT))), LH2 LH1 RM2 RB3, ALL, COMBO_TERM_FAST)
 
 // ****************************************************************************
 // ctrl+gui+shift combos
